# Abelard

./: .gitattributes  .gitignore  .graphifyignore  CLAUDE.md  README.md
abelard_queue/: README.md  pyproject.toml
abelard_queue/abelard_queue/: __init__.py  consumer.py
abelard_queue/tests/: test_consumer.py
consensus/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
consensus/consensus/: __init__.py  cache.py  cli.py  collector.py  config.py  errors.py  fetching.py  m0c.py  m0f.py  m10.py  m5.py  models.py  sources_kalshi.py  sources_polygon.py  sources_polymarket.py  sources_subgraph.py  tape.py
consensus/docs/: deploy_collector_basilic.md  handoff_polymarket_signal_system.md  m0b2_specialist.md  m0b_checkpoint.md  m0c_access_pattern.md  m0c_report.md  m0f_report.md  m10_build_plan.md  m10_labels.jsonl  m5_report.md
consensus/tests/: conftest.py  test_cache.py  test_cli_smoke.py  test_collector.py  test_config.py  test_fetching.py  test_m0c.py  test_m0f.py  test_m10.py  test_m5.py  test_models.py  test_sources.py  test_subgraph.py  test_tape.py
daemons/biz_daemon/: .env.example  .gitignore  AGENTS.md  SOUL.md  pyproject.toml
daemons/biz_daemon/biz_daemon/: __init__.py  __main__.py  blacklist.py  cli.py  config.py  extractor.py  fourchan_client.py  orchestrator.py  sentiment.py  storage.py  tableview.py  ticker_universe.py
daemons/biz_daemon/biz_daemon/data/: biz_slang_blacklist.txt  us_symbols_fallback.txt
daemons/biz_daemon/tests/: conftest.py  test_blacklist_cli.py  test_dotenv.py  test_extractor.py  test_fourchan_client.py  test_names.py  test_orchestrator.py  test_sentiment.py  test_tableview.py  test_ticker_universe.py
daemons/chatter_daemon/: .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  pyproject.toml
daemons/chatter_daemon/chatter_daemon/: __init__.py  __main__.py  aggregate.py  anomaly.py  attention.py  attention_store.py  baseline.py  cli.py  config.py  discovery.py  errors.py  history.py  matching.py  news_summary.py  orchestrator.py  persist.py  render.py  report.py  schema.py  sentiment.py  ticker_universe.py  watchlist.py  windows.py
daemons/chatter_daemon/chatter_daemon/data/: common_words.txt  company_names.txt  slang_blacklist.txt
daemons/chatter_daemon/chatter_daemon/sources/: __init__.py  alpha_vantage.py  base.py  finnhub_news.py  google_trends.py  reddit.py  registry.py  smg.py  stocktwits.py  (+2 more)
daemons/chatter_daemon/scripts/: patch_twitter_cli.py  run.sh
daemons/chatter_daemon/tests/: conftest.py  test_aggregate.py  test_alpha_vantage.py  test_anomaly.py  test_attention.py  test_attention_store.py  test_baseline.py  test_cli.py  test_config.py  test_discovery.py  test_finnhub.py  test_google_trends.py  test_history.py  test_matching.py  test_news_summary.py  test_orchestrator.py  test_persist.py  test_pipeline.py  test_reddit.py  test_render.py  test_report.py  test_schema.py  test_sentiment.py  test_smg.py  test_stocktwits.py  test_ticker_universe.py  test_twitter.py  test_watchlist.py  test_windows.py  test_yahoo.py
daemons/chatter_daemon/watchlists/: barber_growth.csv  barber_growth.json
daemons/common/: .gitignore  AGENTS.md  pyproject.toml
daemons/common/abelard_common/: __init__.py  alert_queue.py  company_aliases.py  errors.py  fourchan_fetch.py  http_client.py  ticker_noise.py
daemons/common/tests/: test_alert_queue.py  test_fourchan_fetch.py  test_http_client.py
daemons/news_watch_daemon/: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  SKILL.md  SOUL.md  pyproject.toml
daemons/news_watch_daemon/config/: stopwords.yaml  synthesis_config.yaml  tracked_tickers.yaml  translation.yaml
daemons/news_watch_daemon/doctrine/: 2026-05-27_session_notes.md
daemons/news_watch_daemon/schema/: initial.sql  v2_dedupe_composite_index.sql  v3_headlines_language_column.sql  v4_headlines_translation_column.sql
daemons/news_watch_daemon/tests/: conftest.py  test_ai_capex_recall.py  test_alert_abelard_queue_sink.py  test_alert_null_sink.py  test_alert_signal_sink.py  test_alert_signal_sink_readonly.py  test_alert_telegram_bot_sink.py  test_alert_telegram_bot_sink_readonly.py  test_attention_adjacency.py  test_attention_cli.py  test_attention_cluster.py  test_attention_counter.py  test_attention_event_group.py  test_attention_orchestrator.py  test_attention_prompt.py  test_attention_stopwords.py  test_attention_threshold.py  test_checkpoint_4_fixture.py  test_cli_argparse.py  test_cli_briefs_headlines.py  test_cli_db_retag.py  test_cli_full_brief.py  test_cli_proposals.py  test_cli_read_brief.py  test_cli_synthesize.py  test_cli_translate.py  test_config.py  test_content_blocklist.py  test_db_backfill_language.py  test_db_schema.py  test_envelope.py  test_fullbrief_brief.py  test_fullbrief_convergence.py  test_fullbrief_cost.py  test_fullbrief_frequency_diagnostic.py  test_fullbrief_orchestrator.py  test_fullbrief_pdf.py  test_fullbrief_render.py  test_http_client.py  test_lang_classifier.py  (+36 more)
daemons/news_watch_daemon/themes/: ai_capex_cycle.yaml  capital_markets.yaml  china_us_decoupling.yaml  currency.yaml  defense_industrial.yaml  energy.yaml  fed_policy_path.yaml  political_volatility.yaml  prediction_markets.yaml  russia_ukraine_war.yaml  tokenized_finance_infrastructure.yaml  us_iran_escalation.yaml
daemons/news_watch_daemon/tools/: drift_smoke.py  render_brief.py  synthesis_smoke.py
daemons/research_daemon/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  pyproject.toml
daemons/research_daemon/research_daemon/: __init__.py  cli.py  config.py  detect_insider_activity.py  detect_institutional_changes.py  envelope.py  fetch_insider_transactions.py  fetch_institutional_holdings.py  fetch_news.py  fetch_quote.py  fetch_sec_filing.py  http_client.py
daemons/research_daemon/tests/: conftest.py  test_cli.py  test_detect_insider_activity.py  test_detect_institutional_changes.py  test_envelope.py  test_fetch_insider_transactions.py  test_fetch_institutional_holdings.py  test_fetch_news.py  test_fetch_quote.py  test_fetch_sec_filing.py  test_http_client.py
(+157 files in other folders)
