[project]
name = "consensus"
version = "0.1.0"
description = "CONSENSUS — Polymarket winners-circle signal system. Read-only ingestion of Polymarket international on-chain data + Kalshi public market data; scores skilled wallets, detects convergence, maps to legal execution venues. Advisory-first; LLMs are never in the data path."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[project.scripts]
consensus = "consensus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["consensus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# NOTE: this package consumes `abelard_common` (the monorepo shared lib at
# ../daemons/common). It is not on PyPI, so — matching the other daemons — it is
# installed editable into the same venv rather than declared here:
#     pip install -e ../daemons/common -e .[dev]
# See README.md → Setup.
