[project]
name = "biz-daemon"
version = "0.1.0"
description = "Retail-sentiment sensor over 4chan /biz/ /smg/ for OpenClaw. Extracts US-equity ticker mentions, counts, and Haiku-classifies stance. The daemon is dumb; Abelard judges."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.40,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[project.scripts]
biz-daemon = "biz_daemon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["biz_daemon*"]

[tool.setuptools.package-data]
biz_daemon = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
